Added test suit FakturaServiceTest + KontaktServiceTest